--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -135,5 +135,5 @@ reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,
 reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,30->160,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
 
 
-tracks_shift_y=s2,0,+1.2;s1,0,+2
+tracks_shift_y=s2,0,+1.2:+1.2
 
