--- a/example/main.11.conf
+++ b/example/main.11.conf
@@ -4,7 +4,7 @@ pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
-feature_keywords = gene,circle,ytick,plot_depth,long_read,xxxxx # *, gene,point,hist,heatmap
+feature_keywords = gene,circle,ytick,plot_depth,long_read,short_reads,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf11.new # *
 
 # figure width layout
@@ -81,7 +81,7 @@ legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-#crossing_link = feature.crossing.link.conf9.new
+crossing_link = feature.crossing.link.conf11
 cross_link_color = #FF8C00
 cross_link_opacity = 1
 cross_link_anchor_pos = low_up # up,medium,low
@@ -139,5 +139,5 @@ scale_tick_fontsize=13
 reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam,stack,-20->-1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15 # $tick_color, $tick_opacity, $tick_border, tick_label_size
 tracks_shift_y=chr14,0,+15:+15, #sample2,block_index2,+0.3;sample2,block_index2,-0.1
 #reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow_or_stack_or_paired,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15
-reads_mapping=long_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow_or_stack_or_paired,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow_or_stack_or_paired,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15
 
