--- a/example/main.11.conf
+++ b/example/main.11.conf
@@ -1,5 +1,5 @@
 # output figure size
-svg_width_height = 1300,800 # *
+svg_width_height = 1300,1200 # *
 pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
@@ -136,8 +136,8 @@ scale_tick_fontsize=13
 #reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,23->80,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
 
 #reads_mapping=long_reads,1,chr14,14,0,../genomeview/examples/data/pacbio.chr14.sort.bam,rainbow_or_hline,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15 # $tick_color, $tick_opacity, $tick_border, tick_label_size
-reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam,stack,-20->-1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15 # $tick_color, $tick_opacity, $tick_border, tick_label_size
-tracks_shift_y=chr14,0,+15:+15, #sample2,block_index2,+0.3;sample2,block_index2,-0.1
+reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam,stack,-30->-2100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:3bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp # $tick_color, $tick_opacity, $tick_border, tick_label_size
+tracks_shift_y=chr14,0,+18:+20, #sample2,block_index2,+0.3;sample2,block_index2,-0.1
 #reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow_or_stack_or_paired,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow_or_stack_or_paired,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow_or_stack_or_paired,20->2000,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
 
