--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -1,5 +1,5 @@
 # output figure size
-svg_width_height = 1500,500 # *
+svg_width_height = 1500,800 # *
 pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
@@ -118,22 +118,22 @@ scale_tick_fontsize=13
 #$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
 
 
-plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,5->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
-plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,100->180,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,2:2
-plot_depth = hist,1,s3,s3,2,100,s3.s3.depth.txt,20->150,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,5:5:2:0.2,3:3
+plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,10->300,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
+plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,320->500,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,2:2
+plot_depth = hist,1,s3,s3,2,100,s3.s3.depth.txt,30->450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,5:5:2:0.2,3:3
 
-plot_depth = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
-plot_depth = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,110->180,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
-#plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
+#plot_depth = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
+plot_depth = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,230->500,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
+plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,50->200,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
 
 #plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->180,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
+plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,20->480,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,5:5:2:0.2,3:3
 
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,100->180,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->3000:4000,4500:5500
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->90,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
-reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,30->160,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,50->280,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->3000:4000,4500:5500
+reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,300->480,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,30->470,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:5:2:0.2,3:3	 start_end_xaxis->2000:6000
 
 
-tracks_shift_y=s2,0,+1.2:+1.2
+tracks_shift_y=s2,0,+5:+5
 
