--- a/example/main.11.conf
+++ b/example/main.11.conf
@@ -4,7 +4,7 @@ pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
-feature_keywords = gene,circle,ytick,plot_depth,long_read,short_reads,xxxxx # *, gene,point,hist,heatmap
+feature_keywords = gene,circle,ytick,hist_scatter_line,long_read,short_reads,xxxxx # *, gene,point,hist,heatmap
 #feature_keywords = gene,circle,ytick,short_reads,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf11.new # *
 
@@ -120,17 +120,17 @@ scale_tick_fontsize=13
 #$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
 
 
-#plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
-#plot_depth = hist,1,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
-#plot_depth = hist,1,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
+#hist_scatter_line = hist,1,s3,s3,1,100,s3.s3.depth.txt,5->55,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	highlight_hgrid->26:2:green,28:2:black    highlight_columns->0:20:green:0.7,20:100:black:0.5 start_end_xaxis->111:511,711:1111,1211:1911
+#hist_scatter_line = hist,1,s3,s3,1,100,s3.s3.depth.txt,65->95,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,2:2
+#hist_scatter_line = hist,1,s3,s3,2,100,s3.s3.depth.txt,15->70,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3,3:3
 
-#plot_depth = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
-#plot_depth = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
-#plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#hist_scatter_line = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#hist_scatter_line = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,5->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#hist_scatter_line = hist,1,s3,s3,3,50,s3.s3.depth.txt,55->90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-#plot_depth = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#hist_scatter_line = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-#plot_depth = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->80,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
+#hist_scatter_line = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,15->80,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
 #reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,55->85,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->3000:4000,4500:5500
 #reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,rainbow_or_hline,20->50,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,0.3:0.3,3:3	 start_end_xaxis->2000:6000
@@ -138,10 +138,12 @@ scale_tick_fontsize=13
 
 #reads_mapping=long_reads,1,chr14,14,0,../genomeview/examples/data/pacbio.chr14.sort.bam,rainbow_or_hline,20->1450,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,3:10:2:0,15:15 # $tick_color, $tick_opacity, $tick_border, tick_label_size
 
-reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam,stack,-10->-100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:3bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp # $tick_color, $tick_opacity, $tick_border, tick_label_size
+reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam,stack,-10->-100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:3bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp # $tick_color, $tick_opacity, $tick_border, tick_label_size
 tracks_shift_y=chr14,0,+18:+20, #sample2,block_index2,+0.3;sample2,block_index2,-0.1
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,paired:color->yellow:opacity->1:cross_link_height_line->0.4,61->110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,stack,35->60,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
-plot_depth = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,5->20,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,paired:color->yellow:opacity->1:cross_link_height_line->0.4,61->110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,stack,35->60,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
+#hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
+hist_scatter_line = hist,2,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.2.txt,color->black:opacity->1,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
+hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.14.66900400.66917974.depth,color->green:opacity->1,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,5->20,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
 
