--- a/example/s3.s3.1.1.111.511.depth.setting.conf
+++ b/example/s3.s3.1.1.111.511.depth.setting.conf
@@ -1,6 +1,6 @@
 s3.s3.1.hist.0.1.111.511	display_feature_label	no
-s3.s3.1.hist.0.1.111.511	feature_color	green
-s3.s3.1.hist.0.1.111.511	feature_opacity	0.8
+s3.s3.1.hist.0.1.111.511	feature_color	black
+s3.s3.1.hist.0.1.111.511	feature_opacity	1
 s3.s3.1.hist.0.1.111.511	feature_order	1
 
 s3.s3.1.hist.0.1.111.511	feature_height_ratio	36
@@ -10,8 +10,8 @@ s3.s3.1.hist.0.1.111.511	feature_shape	rect
 s3.s3.1.hist.0.1.111.511	feature_shift_y	-5
 s3.s3.1.hist.0.1.111.511	feature_shift_y_unit	percent
 s3.s3.1.hist.1.1.111.511	display_feature_label	no
-s3.s3.1.hist.1.1.111.511	feature_color	green
-s3.s3.1.hist.1.1.111.511	feature_opacity	0.8
+s3.s3.1.hist.1.1.111.511	feature_color	black
+s3.s3.1.hist.1.1.111.511	feature_opacity	1
 s3.s3.1.hist.1.1.111.511	feature_order	1
 
 s3.s3.1.hist.1.1.111.511	feature_height_ratio	24
@@ -21,8 +21,8 @@ s3.s3.1.hist.1.1.111.511	feature_shape	rect
 s3.s3.1.hist.1.1.111.511	feature_shift_y	-5
 s3.s3.1.hist.1.1.111.511	feature_shift_y_unit	percent
 s3.s3.1.hist.2.1.111.511	display_feature_label	no
-s3.s3.1.hist.2.1.111.511	feature_color	green
-s3.s3.1.hist.2.1.111.511	feature_opacity	0.8
+s3.s3.1.hist.2.1.111.511	feature_color	black
+s3.s3.1.hist.2.1.111.511	feature_opacity	1
 s3.s3.1.hist.2.1.111.511	feature_order	1
 
 s3.s3.1.hist.2.1.111.511	feature_height_ratio	32
@@ -32,8 +32,8 @@ s3.s3.1.hist.2.1.111.511	feature_shape	rect
 s3.s3.1.hist.2.1.111.511	feature_shift_y	-5
 s3.s3.1.hist.2.1.111.511	feature_shift_y_unit	percent
 s3.s3.1.hist.3.1.111.511	display_feature_label	no
-s3.s3.1.hist.3.1.111.511	feature_color	green
-s3.s3.1.hist.3.1.111.511	feature_opacity	0.8
+s3.s3.1.hist.3.1.111.511	feature_color	black
+s3.s3.1.hist.3.1.111.511	feature_opacity	1
 s3.s3.1.hist.3.1.111.511	feature_order	1
 
 s3.s3.1.hist.3.1.111.511	feature_height_ratio	30
