--- a/example/s3.s3.1.1.1211.1911.depth.setting.conf
+++ b/example/s3.s3.1.1.1211.1911.depth.setting.conf
@@ -1,6 +1,6 @@
 s3.s3.1.hist.0.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.0.1.1211.1911	feature_color	green
-s3.s3.1.hist.0.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.0.1.1211.1911	feature_color	black
+s3.s3.1.hist.0.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.0.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.0.1.1211.1911	feature_height_ratio	32
@@ -10,8 +10,8 @@ s3.s3.1.hist.0.1.1211.1911	feature_shape	rect
 s3.s3.1.hist.0.1.1211.1911	feature_shift_y	-5
 s3.s3.1.hist.0.1.1211.1911	feature_shift_y_unit	percent
 s3.s3.1.hist.1.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.1.1.1211.1911	feature_color	green
-s3.s3.1.hist.1.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.1.1.1211.1911	feature_color	black
+s3.s3.1.hist.1.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.1.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.1.1.1211.1911	feature_height_ratio	26
@@ -21,8 +21,8 @@ s3.s3.1.hist.1.1.1211.1911	feature_shape	rect
 s3.s3.1.hist.1.1.1211.1911	feature_shift_y	-5
 s3.s3.1.hist.1.1.1211.1911	feature_shift_y_unit	percent
 s3.s3.1.hist.2.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.2.1.1211.1911	feature_color	green
-s3.s3.1.hist.2.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.2.1.1211.1911	feature_color	black
+s3.s3.1.hist.2.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.2.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.2.1.1211.1911	feature_height_ratio	30
@@ -32,8 +32,8 @@ s3.s3.1.hist.2.1.1211.1911	feature_shape	rect
 s3.s3.1.hist.2.1.1211.1911	feature_shift_y	-5
 s3.s3.1.hist.2.1.1211.1911	feature_shift_y_unit	percent
 s3.s3.1.hist.3.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.3.1.1211.1911	feature_color	green
-s3.s3.1.hist.3.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.3.1.1211.1911	feature_color	black
+s3.s3.1.hist.3.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.3.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.3.1.1211.1911	feature_height_ratio	30
@@ -43,8 +43,8 @@ s3.s3.1.hist.3.1.1211.1911	feature_shape	rect
 s3.s3.1.hist.3.1.1211.1911	feature_shift_y	-5
 s3.s3.1.hist.3.1.1211.1911	feature_shift_y_unit	percent
 s3.s3.1.hist.4.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.4.1.1211.1911	feature_color	green
-s3.s3.1.hist.4.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.4.1.1211.1911	feature_color	black
+s3.s3.1.hist.4.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.4.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.4.1.1211.1911	feature_height_ratio	22
@@ -54,8 +54,8 @@ s3.s3.1.hist.4.1.1211.1911	feature_shape	rect
 s3.s3.1.hist.4.1.1211.1911	feature_shift_y	-5
 s3.s3.1.hist.4.1.1211.1911	feature_shift_y_unit	percent
 s3.s3.1.hist.5.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.5.1.1211.1911	feature_color	green
-s3.s3.1.hist.5.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.5.1.1211.1911	feature_color	black
+s3.s3.1.hist.5.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.5.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.5.1.1211.1911	feature_height_ratio	30
@@ -65,8 +65,8 @@ s3.s3.1.hist.5.1.1211.1911	feature_shape	rect
 s3.s3.1.hist.5.1.1211.1911	feature_shift_y	-5
 s3.s3.1.hist.5.1.1211.1911	feature_shift_y_unit	percent
 s3.s3.1.hist.6.1.1211.1911	display_feature_label	no
-s3.s3.1.hist.6.1.1211.1911	feature_color	green
-s3.s3.1.hist.6.1.1211.1911	feature_opacity	0.8
+s3.s3.1.hist.6.1.1211.1911	feature_color	black
+s3.s3.1.hist.6.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.6.1.1211.1911	feature_order	1
 
 s3.s3.1.hist.6.1.1211.1911	feature_height_ratio	24
