--- a/example/s3.s3.1.2.11.2010.depth.setting.conf
+++ b/example/s3.s3.1.2.11.2010.depth.setting.conf
@@ -1,6 +1,6 @@
 s3.s3.1.hist.0.2.11.2010	display_feature_label	no
-s3.s3.1.hist.0.2.11.2010	feature_color	green
-s3.s3.1.hist.0.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.0.2.11.2010	feature_color	black
+s3.s3.1.hist.0.2.11.2010	feature_opacity	1
 s3.s3.1.hist.0.2.11.2010	feature_order	1
 
 s3.s3.1.hist.0.2.11.2010	feature_height_ratio	13.5
@@ -10,8 +10,8 @@ s3.s3.1.hist.0.2.11.2010	feature_shape	rect
 s3.s3.1.hist.0.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.0.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.1.2.11.2010	display_feature_label	no
-s3.s3.1.hist.1.2.11.2010	feature_color	green
-s3.s3.1.hist.1.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.1.2.11.2010	feature_color	black
+s3.s3.1.hist.1.2.11.2010	feature_opacity	1
 s3.s3.1.hist.1.2.11.2010	feature_order	1
 
 s3.s3.1.hist.1.2.11.2010	feature_height_ratio	36
@@ -21,8 +21,8 @@ s3.s3.1.hist.1.2.11.2010	feature_shape	rect
 s3.s3.1.hist.1.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.1.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.2.2.11.2010	display_feature_label	no
-s3.s3.1.hist.2.2.11.2010	feature_color	green
-s3.s3.1.hist.2.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.2.2.11.2010	feature_color	black
+s3.s3.1.hist.2.2.11.2010	feature_opacity	1
 s3.s3.1.hist.2.2.11.2010	feature_order	1
 
 s3.s3.1.hist.2.2.11.2010	feature_height_ratio	9
@@ -32,8 +32,8 @@ s3.s3.1.hist.2.2.11.2010	feature_shape	rect
 s3.s3.1.hist.2.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.2.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.3.2.11.2010	display_feature_label	no
-s3.s3.1.hist.3.2.11.2010	feature_color	green
-s3.s3.1.hist.3.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.3.2.11.2010	feature_color	black
+s3.s3.1.hist.3.2.11.2010	feature_opacity	1
 s3.s3.1.hist.3.2.11.2010	feature_order	1
 
 s3.s3.1.hist.3.2.11.2010	feature_height_ratio	27
@@ -43,8 +43,8 @@ s3.s3.1.hist.3.2.11.2010	feature_shape	rect
 s3.s3.1.hist.3.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.3.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.4.2.11.2010	display_feature_label	no
-s3.s3.1.hist.4.2.11.2010	feature_color	green
-s3.s3.1.hist.4.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.4.2.11.2010	feature_color	black
+s3.s3.1.hist.4.2.11.2010	feature_opacity	1
 s3.s3.1.hist.4.2.11.2010	feature_order	1
 
 s3.s3.1.hist.4.2.11.2010	feature_height_ratio	22.5
@@ -54,8 +54,8 @@ s3.s3.1.hist.4.2.11.2010	feature_shape	rect
 s3.s3.1.hist.4.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.4.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.5.2.11.2010	display_feature_label	no
-s3.s3.1.hist.5.2.11.2010	feature_color	green
-s3.s3.1.hist.5.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.5.2.11.2010	feature_color	black
+s3.s3.1.hist.5.2.11.2010	feature_opacity	1
 s3.s3.1.hist.5.2.11.2010	feature_order	1
 
 s3.s3.1.hist.5.2.11.2010	feature_height_ratio	18
@@ -65,8 +65,8 @@ s3.s3.1.hist.5.2.11.2010	feature_shape	rect
 s3.s3.1.hist.5.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.5.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.6.2.11.2010	display_feature_label	no
-s3.s3.1.hist.6.2.11.2010	feature_color	green
-s3.s3.1.hist.6.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.6.2.11.2010	feature_color	black
+s3.s3.1.hist.6.2.11.2010	feature_opacity	1
 s3.s3.1.hist.6.2.11.2010	feature_order	1
 
 s3.s3.1.hist.6.2.11.2010	feature_height_ratio	18
@@ -76,8 +76,8 @@ s3.s3.1.hist.6.2.11.2010	feature_shape	rect
 s3.s3.1.hist.6.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.6.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.7.2.11.2010	display_feature_label	no
-s3.s3.1.hist.7.2.11.2010	feature_color	green
-s3.s3.1.hist.7.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.7.2.11.2010	feature_color	black
+s3.s3.1.hist.7.2.11.2010	feature_opacity	1
 s3.s3.1.hist.7.2.11.2010	feature_order	1
 
 s3.s3.1.hist.7.2.11.2010	feature_height_ratio	22.5
@@ -87,8 +87,8 @@ s3.s3.1.hist.7.2.11.2010	feature_shape	rect
 s3.s3.1.hist.7.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.7.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.8.2.11.2010	display_feature_label	no
-s3.s3.1.hist.8.2.11.2010	feature_color	green
-s3.s3.1.hist.8.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.8.2.11.2010	feature_color	black
+s3.s3.1.hist.8.2.11.2010	feature_opacity	1
 s3.s3.1.hist.8.2.11.2010	feature_order	1
 
 s3.s3.1.hist.8.2.11.2010	feature_height_ratio	31.5
@@ -98,8 +98,8 @@ s3.s3.1.hist.8.2.11.2010	feature_shape	rect
 s3.s3.1.hist.8.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.8.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.9.2.11.2010	display_feature_label	no
-s3.s3.1.hist.9.2.11.2010	feature_color	green
-s3.s3.1.hist.9.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.9.2.11.2010	feature_color	black
+s3.s3.1.hist.9.2.11.2010	feature_opacity	1
 s3.s3.1.hist.9.2.11.2010	feature_order	1
 
 s3.s3.1.hist.9.2.11.2010	feature_height_ratio	22.5
@@ -109,8 +109,8 @@ s3.s3.1.hist.9.2.11.2010	feature_shape	rect
 s3.s3.1.hist.9.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.9.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.10.2.11.2010	display_feature_label	no
-s3.s3.1.hist.10.2.11.2010	feature_color	green
-s3.s3.1.hist.10.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.10.2.11.2010	feature_color	black
+s3.s3.1.hist.10.2.11.2010	feature_opacity	1
 s3.s3.1.hist.10.2.11.2010	feature_order	1
 
 s3.s3.1.hist.10.2.11.2010	feature_height_ratio	27
@@ -120,8 +120,8 @@ s3.s3.1.hist.10.2.11.2010	feature_shape	rect
 s3.s3.1.hist.10.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.10.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.11.2.11.2010	display_feature_label	no
-s3.s3.1.hist.11.2.11.2010	feature_color	green
-s3.s3.1.hist.11.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.11.2.11.2010	feature_color	black
+s3.s3.1.hist.11.2.11.2010	feature_opacity	1
 s3.s3.1.hist.11.2.11.2010	feature_order	1
 
 s3.s3.1.hist.11.2.11.2010	feature_height_ratio	18
@@ -131,8 +131,8 @@ s3.s3.1.hist.11.2.11.2010	feature_shape	rect
 s3.s3.1.hist.11.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.11.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.12.2.11.2010	display_feature_label	no
-s3.s3.1.hist.12.2.11.2010	feature_color	green
-s3.s3.1.hist.12.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.12.2.11.2010	feature_color	black
+s3.s3.1.hist.12.2.11.2010	feature_opacity	1
 s3.s3.1.hist.12.2.11.2010	feature_order	1
 
 s3.s3.1.hist.12.2.11.2010	feature_height_ratio	27
@@ -142,8 +142,8 @@ s3.s3.1.hist.12.2.11.2010	feature_shape	rect
 s3.s3.1.hist.12.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.12.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.13.2.11.2010	display_feature_label	no
-s3.s3.1.hist.13.2.11.2010	feature_color	green
-s3.s3.1.hist.13.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.13.2.11.2010	feature_color	black
+s3.s3.1.hist.13.2.11.2010	feature_opacity	1
 s3.s3.1.hist.13.2.11.2010	feature_order	1
 
 s3.s3.1.hist.13.2.11.2010	feature_height_ratio	13.5
@@ -153,8 +153,8 @@ s3.s3.1.hist.13.2.11.2010	feature_shape	rect
 s3.s3.1.hist.13.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.13.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.14.2.11.2010	display_feature_label	no
-s3.s3.1.hist.14.2.11.2010	feature_color	green
-s3.s3.1.hist.14.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.14.2.11.2010	feature_color	black
+s3.s3.1.hist.14.2.11.2010	feature_opacity	1
 s3.s3.1.hist.14.2.11.2010	feature_order	1
 
 s3.s3.1.hist.14.2.11.2010	feature_height_ratio	22.5
@@ -164,8 +164,8 @@ s3.s3.1.hist.14.2.11.2010	feature_shape	rect
 s3.s3.1.hist.14.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.14.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.15.2.11.2010	display_feature_label	no
-s3.s3.1.hist.15.2.11.2010	feature_color	green
-s3.s3.1.hist.15.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.15.2.11.2010	feature_color	black
+s3.s3.1.hist.15.2.11.2010	feature_opacity	1
 s3.s3.1.hist.15.2.11.2010	feature_order	1
 
 s3.s3.1.hist.15.2.11.2010	feature_height_ratio	22.5
@@ -175,8 +175,8 @@ s3.s3.1.hist.15.2.11.2010	feature_shape	rect
 s3.s3.1.hist.15.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.15.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.16.2.11.2010	display_feature_label	no
-s3.s3.1.hist.16.2.11.2010	feature_color	green
-s3.s3.1.hist.16.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.16.2.11.2010	feature_color	black
+s3.s3.1.hist.16.2.11.2010	feature_opacity	1
 s3.s3.1.hist.16.2.11.2010	feature_order	1
 
 s3.s3.1.hist.16.2.11.2010	feature_height_ratio	4.5
@@ -186,8 +186,8 @@ s3.s3.1.hist.16.2.11.2010	feature_shape	rect
 s3.s3.1.hist.16.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.16.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.17.2.11.2010	display_feature_label	no
-s3.s3.1.hist.17.2.11.2010	feature_color	green
-s3.s3.1.hist.17.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.17.2.11.2010	feature_color	black
+s3.s3.1.hist.17.2.11.2010	feature_opacity	1
 s3.s3.1.hist.17.2.11.2010	feature_order	1
 
 s3.s3.1.hist.17.2.11.2010	feature_height_ratio	22.5
@@ -197,8 +197,8 @@ s3.s3.1.hist.17.2.11.2010	feature_shape	rect
 s3.s3.1.hist.17.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.17.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.18.2.11.2010	display_feature_label	no
-s3.s3.1.hist.18.2.11.2010	feature_color	green
-s3.s3.1.hist.18.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.18.2.11.2010	feature_color	black
+s3.s3.1.hist.18.2.11.2010	feature_opacity	1
 s3.s3.1.hist.18.2.11.2010	feature_order	1
 
 s3.s3.1.hist.18.2.11.2010	feature_height_ratio	9
@@ -208,8 +208,8 @@ s3.s3.1.hist.18.2.11.2010	feature_shape	rect
 s3.s3.1.hist.18.2.11.2010	feature_shift_y	-55
 s3.s3.1.hist.18.2.11.2010	feature_shift_y_unit	percent
 s3.s3.1.hist.19.2.11.2010	display_feature_label	no
-s3.s3.1.hist.19.2.11.2010	feature_color	green
-s3.s3.1.hist.19.2.11.2010	feature_opacity	0.8
+s3.s3.1.hist.19.2.11.2010	feature_color	black
+s3.s3.1.hist.19.2.11.2010	feature_opacity	1
 s3.s3.1.hist.19.2.11.2010	feature_order	1
 
 s3.s3.1.hist.19.2.11.2010	feature_height_ratio	27
