--- a/example/s3.s3.2.3.2020.5000.depth.setting.conf
+++ b/example/s3.s3.2.3.2020.5000.depth.setting.conf
@@ -1,6 +1,6 @@
 s3.s3.2.hist.0.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.0.3.2020.5000	feature_color	green
-s3.s3.2.hist.0.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.0.3.2020.5000	feature_color	black
+s3.s3.2.hist.0.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.0.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.0.3.2020.5000	feature_height_ratio	38
@@ -10,8 +10,8 @@ s3.s3.2.hist.0.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.0.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.0.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.1.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.1.3.2020.5000	feature_color	green
-s3.s3.2.hist.1.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.1.3.2020.5000	feature_color	black
+s3.s3.2.hist.1.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.1.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.1.3.2020.5000	feature_height_ratio	38
@@ -21,8 +21,8 @@ s3.s3.2.hist.1.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.1.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.1.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.2.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.2.3.2020.5000	feature_color	green
-s3.s3.2.hist.2.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.2.3.2020.5000	feature_color	black
+s3.s3.2.hist.2.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.2.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.2.3.2020.5000	feature_height_ratio	57
@@ -32,8 +32,8 @@ s3.s3.2.hist.2.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.2.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.2.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.3.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.3.3.2020.5000	feature_color	green
-s3.s3.2.hist.3.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.3.3.2020.5000	feature_color	black
+s3.s3.2.hist.3.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.3.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.3.3.2020.5000	feature_height_ratio	66.5
@@ -43,8 +43,8 @@ s3.s3.2.hist.3.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.3.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.3.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.4.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.4.3.2020.5000	feature_color	green
-s3.s3.2.hist.4.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.4.3.2020.5000	feature_color	black
+s3.s3.2.hist.4.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.4.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.4.3.2020.5000	feature_height_ratio	38
@@ -54,8 +54,8 @@ s3.s3.2.hist.4.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.4.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.4.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.5.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.5.3.2020.5000	feature_color	green
-s3.s3.2.hist.5.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.5.3.2020.5000	feature_color	black
+s3.s3.2.hist.5.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.5.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.5.3.2020.5000	feature_height_ratio	66.5
@@ -65,8 +65,8 @@ s3.s3.2.hist.5.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.5.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.5.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.6.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.6.3.2020.5000	feature_color	green
-s3.s3.2.hist.6.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.6.3.2020.5000	feature_color	black
+s3.s3.2.hist.6.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.6.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.6.3.2020.5000	feature_height_ratio	28.5
@@ -76,8 +76,8 @@ s3.s3.2.hist.6.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.6.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.6.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.7.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.7.3.2020.5000	feature_color	green
-s3.s3.2.hist.7.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.7.3.2020.5000	feature_color	black
+s3.s3.2.hist.7.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.7.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.7.3.2020.5000	feature_height_ratio	85.5
@@ -87,8 +87,8 @@ s3.s3.2.hist.7.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.7.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.7.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.8.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.8.3.2020.5000	feature_color	green
-s3.s3.2.hist.8.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.8.3.2020.5000	feature_color	black
+s3.s3.2.hist.8.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.8.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.8.3.2020.5000	feature_height_ratio	47.5
@@ -98,8 +98,8 @@ s3.s3.2.hist.8.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.8.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.8.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.9.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.9.3.2020.5000	feature_color	green
-s3.s3.2.hist.9.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.9.3.2020.5000	feature_color	black
+s3.s3.2.hist.9.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.9.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.9.3.2020.5000	feature_height_ratio	66.5
@@ -109,8 +109,8 @@ s3.s3.2.hist.9.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.9.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.9.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.10.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.10.3.2020.5000	feature_color	green
-s3.s3.2.hist.10.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.10.3.2020.5000	feature_color	black
+s3.s3.2.hist.10.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.10.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.10.3.2020.5000	feature_height_ratio	66.5
@@ -120,8 +120,8 @@ s3.s3.2.hist.10.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.10.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.10.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.11.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.11.3.2020.5000	feature_color	green
-s3.s3.2.hist.11.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.11.3.2020.5000	feature_color	black
+s3.s3.2.hist.11.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.11.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.11.3.2020.5000	feature_height_ratio	47.5
@@ -131,8 +131,8 @@ s3.s3.2.hist.11.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.11.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.11.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.12.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.12.3.2020.5000	feature_color	green
-s3.s3.2.hist.12.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.12.3.2020.5000	feature_color	black
+s3.s3.2.hist.12.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.12.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.12.3.2020.5000	feature_height_ratio	28.5
@@ -142,8 +142,8 @@ s3.s3.2.hist.12.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.12.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.12.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.13.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.13.3.2020.5000	feature_color	green
-s3.s3.2.hist.13.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.13.3.2020.5000	feature_color	black
+s3.s3.2.hist.13.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.13.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.13.3.2020.5000	feature_height_ratio	28.5
@@ -153,8 +153,8 @@ s3.s3.2.hist.13.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.13.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.13.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.14.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.14.3.2020.5000	feature_color	green
-s3.s3.2.hist.14.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.14.3.2020.5000	feature_color	black
+s3.s3.2.hist.14.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.14.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.14.3.2020.5000	feature_height_ratio	19
@@ -164,8 +164,8 @@ s3.s3.2.hist.14.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.14.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.14.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.15.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.15.3.2020.5000	feature_color	green
-s3.s3.2.hist.15.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.15.3.2020.5000	feature_color	black
+s3.s3.2.hist.15.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.15.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.15.3.2020.5000	feature_height_ratio	19
@@ -175,8 +175,8 @@ s3.s3.2.hist.15.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.15.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.15.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.16.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.16.3.2020.5000	feature_color	green
-s3.s3.2.hist.16.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.16.3.2020.5000	feature_color	black
+s3.s3.2.hist.16.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.16.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.16.3.2020.5000	feature_height_ratio	19
@@ -186,8 +186,8 @@ s3.s3.2.hist.16.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.16.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.16.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.17.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.17.3.2020.5000	feature_color	green
-s3.s3.2.hist.17.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.17.3.2020.5000	feature_color	black
+s3.s3.2.hist.17.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.17.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.17.3.2020.5000	feature_height_ratio	66.5
@@ -197,8 +197,8 @@ s3.s3.2.hist.17.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.17.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.17.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.18.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.18.3.2020.5000	feature_color	green
-s3.s3.2.hist.18.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.18.3.2020.5000	feature_color	black
+s3.s3.2.hist.18.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.18.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.18.3.2020.5000	feature_height_ratio	47.5
@@ -208,8 +208,8 @@ s3.s3.2.hist.18.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.18.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.18.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.19.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.19.3.2020.5000	feature_color	green
-s3.s3.2.hist.19.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.19.3.2020.5000	feature_color	black
+s3.s3.2.hist.19.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.19.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.19.3.2020.5000	feature_height_ratio	38
@@ -219,8 +219,8 @@ s3.s3.2.hist.19.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.19.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.19.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.20.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.20.3.2020.5000	feature_color	green
-s3.s3.2.hist.20.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.20.3.2020.5000	feature_color	black
+s3.s3.2.hist.20.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.20.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.20.3.2020.5000	feature_height_ratio	57
@@ -230,8 +230,8 @@ s3.s3.2.hist.20.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.20.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.20.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.21.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.21.3.2020.5000	feature_color	green
-s3.s3.2.hist.21.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.21.3.2020.5000	feature_color	black
+s3.s3.2.hist.21.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.21.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.21.3.2020.5000	feature_height_ratio	38
@@ -241,8 +241,8 @@ s3.s3.2.hist.21.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.21.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.21.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.22.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.22.3.2020.5000	feature_color	green
-s3.s3.2.hist.22.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.22.3.2020.5000	feature_color	black
+s3.s3.2.hist.22.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.22.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.22.3.2020.5000	feature_height_ratio	66.5
@@ -252,8 +252,8 @@ s3.s3.2.hist.22.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.22.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.22.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.23.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.23.3.2020.5000	feature_color	green
-s3.s3.2.hist.23.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.23.3.2020.5000	feature_color	black
+s3.s3.2.hist.23.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.23.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.23.3.2020.5000	feature_height_ratio	57
@@ -263,8 +263,8 @@ s3.s3.2.hist.23.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.23.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.23.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.24.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.24.3.2020.5000	feature_color	green
-s3.s3.2.hist.24.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.24.3.2020.5000	feature_color	black
+s3.s3.2.hist.24.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.24.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.24.3.2020.5000	feature_height_ratio	95
@@ -274,8 +274,8 @@ s3.s3.2.hist.24.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.24.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.24.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.25.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.25.3.2020.5000	feature_color	green
-s3.s3.2.hist.25.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.25.3.2020.5000	feature_color	black
+s3.s3.2.hist.25.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.25.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.25.3.2020.5000	feature_height_ratio	28.5
@@ -285,8 +285,8 @@ s3.s3.2.hist.25.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.25.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.25.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.26.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.26.3.2020.5000	feature_color	green
-s3.s3.2.hist.26.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.26.3.2020.5000	feature_color	black
+s3.s3.2.hist.26.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.26.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.26.3.2020.5000	feature_height_ratio	38
@@ -296,8 +296,8 @@ s3.s3.2.hist.26.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.26.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.26.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.27.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.27.3.2020.5000	feature_color	green
-s3.s3.2.hist.27.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.27.3.2020.5000	feature_color	black
+s3.s3.2.hist.27.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.27.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.27.3.2020.5000	feature_height_ratio	28.5
@@ -307,8 +307,8 @@ s3.s3.2.hist.27.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.27.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.27.3.2020.5000	feature_shift_y_unit	percent
 s3.s3.2.hist.28.3.2020.5000	display_feature_label	no
-s3.s3.2.hist.28.3.2020.5000	feature_color	green
-s3.s3.2.hist.28.3.2020.5000	feature_opacity	0.8
+s3.s3.2.hist.28.3.2020.5000	feature_color	black
+s3.s3.2.hist.28.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.28.3.2020.5000	feature_order	1
 
 s3.s3.2.hist.28.3.2020.5000	feature_height_ratio	47.5
