--- a/example/main.11.conf
+++ b/example/main.11.conf
@@ -4,7 +4,7 @@ pdf_dpi = 100
 svg_background_color = white #background color of whole figure
 
 # plot feature type
-feature_keywords = gene,circle,ytick,hist_scatter_line,long_read,short_reads,xxxxx # *, gene,point,hist,heatmap
+feature_keywords = gene,circle,ytick,hist_scatter_line,long_read,short_reads,vcf,ylabel,xxxxx # *, gene,point,hist,heatmap
 #feature_keywords = gene,circle,ytick,short_reads,xxxxx # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.conf11.new # *
 
@@ -28,7 +28,7 @@ track_style= fill:blue;opacity:0.2 # fill:blue;stroke:pink;stroke-width:5;fill-o
 feature_color=rgb(50,205,50)
 feature_border_size=0
 feature_border_color=black 
-genome_height_ratio=5 # mean genome height extend ratio
+genome_height_ratio=1 # mean genome height extend ratio
 feature_arrow_sharp_extent=0 # bigger mean sharper arrow
 # order for display
 track_order=1
@@ -101,23 +101,30 @@ scale_display=yes # yes or no
 scale_position=low # up or low or up_low
 scale_color=green
 scale_width=0.5
-scale_ratio=100 # bp
+scale_ratio=1700 # bp
 scale_padding_y=0.6
 scale_tick_opacity=1
 scale_tick_height=0.01
 scale_order=-1
 scale_tick_padding_y=10
-scale_tick_fontsize=13
+scale_tick_fontsize=6
 
 
 
 
-reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam,stack,-10->-100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:3bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp # $tick_color, $tick_opacity, $tick_border, tick_label_size
+reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam:../../genomeview/chr14.fa,stack,-10->-100,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.4:10bp:rect,H:blue:opacity0.6:height0.2:10bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0:0bp:rect	ylabel->pacbio read mapping stack,gap:150bp,fontsize:13,color:black
+
 tracks_shift_y=chr14,0,+18:+20, #sample2,block_index2,+0.3;sample2,block_index2,-0.1
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,paired:color->yellow:opacity->1:cross_link_height_line->0.4,61->110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,stack,35->60,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
 
-hist_scatter_line = hist,2,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.2.txt,color->black:opacity->1,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
-hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.14.66900400.66917974.depth,color->green:opacity->1,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,5->20,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp,I:red:opacity1:height0.9:6bp,D:black:opacity1:height0.8:1bp,N:blue:opacity1:height0.2:1bp,S:blue:opacity0.6:height0.4:1bp,H:blue:opacity0.6:height0.2:1bp,P:blue:opacity1:height0.2:1bp,X:grey:opacity1:height0.6:1bp,reverse:#1E90FF:opacity0.6:height0.8:6bp,forward:green:opacity0.6:height0.8:1bp,fake:white:opacity1:height0:0bp
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../../genomeview/chr14.fa,paired:color->Orange:opacity->1:cross_link_height_line->0.4,61->110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	ylabel->illuminate read mapping paired,gap:150bp,fontsize:13,color:black
+
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../../genomeview/chr14.fa,stack,35->60,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0	ylabel->illumnate read mapping stack,gap:150bp,fontsize:13,color:black
+
+hist_scatter_line = hist,2,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.2.txt:../../genomeview/chr14.fa,color->black:opacity->1,21->31,0,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.3:0.3:0.1:0.1,5:5
+
+hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.14.66900400.66917974.depth:../../genomeview/chr14.fa,color->green:opacity->1,21->31,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->illuminate read depth,gap:150bp,fontsize:13,color:black
+
+reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../../genomeview/chr14.fa,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,10->20,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0	
+
+reads_mapping=vcf,1,chr14,14,0,../../genomeview/genomeview/examples/data/hg002.chr14.vcf.gz:../../genomeview/chr14.fa,stack,2->9,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:1bp:rect,D:black:opacity1:height0.8:1bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.4:1bp:rect,H:blue:opacity0.6:height0.2:1bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:1bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0:0bp:rect	display_feature_label->yes	feature_x_extent->-2bp,+2bp	ylabel->vcf,gap:150bp,fontsize:15,color:green
 
