--- a/example/chr14.14.1.1.long_reads.ylabel.setting.conf
+++ b/example/chr14.14.1.1.long_reads.ylabel.setting.conf
@@ -1,4 +1,4 @@
-chr14.14.1.66900400.66917974.1.long_reads.ylabel-	featyyure_label_color	black
+chr14.14.1.66900400.66917974.1.long_reads.ylabel-	feature_label_color	black
 chr14.14.1.66900400.66917974.1.long_reads.ylabel-	feature_shift_x	155
 chr14.14.1.66900400.66917974.1.long_reads.ylabel-	feature_height_ratio	0
 chr14.14.1.66900400.66917974.1.long_reads.ylabel-	feature_height_unit	percent
