--- a/example/chr14.14.1.5.vcf.ylabel.setting.conf
+++ b/example/chr14.14.1.5.vcf.ylabel.setting.conf
@@ -1,4 +1,4 @@
-chr14.14.1.66900400.66917974.5.vcf.ylabel+	featyyure_label_color	green
+chr14.14.1.66900400.66917974.5.vcf.ylabel+	feature_label_color	green
 chr14.14.1.66900400.66917974.5.vcf.ylabel+	feature_shift_x	155
 chr14.14.1.66900400.66917974.5.vcf.ylabel+	feature_height_ratio	0
 chr14.14.1.66900400.66917974.5.vcf.ylabel+	feature_height_unit	percent
