--- a/example/s3.s3.1.1.1211.1911.depth.setting.conf
+++ b/example/s3.s3.1.1.1211.1911.depth.setting.conf
@@ -2,6 +2,7 @@ s3.s3.1.hist.0.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.0.1.1211.1911	feature_color	black
 s3.s3.1.hist.0.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.0.1.1211.1911	feature_order	1
+s3.s3.1.hist.0.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.0.1.1211.1911	feature_height_ratio	32
 
@@ -13,6 +14,7 @@ s3.s3.1.hist.1.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.1.1.1211.1911	feature_color	black
 s3.s3.1.hist.1.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.1.1.1211.1911	feature_order	1
+s3.s3.1.hist.1.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.1.1.1211.1911	feature_height_ratio	26
 
@@ -24,6 +26,7 @@ s3.s3.1.hist.2.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.2.1.1211.1911	feature_color	black
 s3.s3.1.hist.2.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.2.1.1211.1911	feature_order	1
+s3.s3.1.hist.2.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.2.1.1211.1911	feature_height_ratio	30
 
@@ -35,6 +38,7 @@ s3.s3.1.hist.3.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.3.1.1211.1911	feature_color	black
 s3.s3.1.hist.3.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.3.1.1211.1911	feature_order	1
+s3.s3.1.hist.3.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.3.1.1211.1911	feature_height_ratio	30
 
@@ -46,6 +50,7 @@ s3.s3.1.hist.4.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.4.1.1211.1911	feature_color	black
 s3.s3.1.hist.4.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.4.1.1211.1911	feature_order	1
+s3.s3.1.hist.4.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.4.1.1211.1911	feature_height_ratio	22
 
@@ -57,6 +62,7 @@ s3.s3.1.hist.5.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.5.1.1211.1911	feature_color	black
 s3.s3.1.hist.5.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.5.1.1211.1911	feature_order	1
+s3.s3.1.hist.5.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.5.1.1211.1911	feature_height_ratio	30
 
@@ -68,6 +74,7 @@ s3.s3.1.hist.6.1.1211.1911	display_feature_label	no
 s3.s3.1.hist.6.1.1211.1911	feature_color	black
 s3.s3.1.hist.6.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.6.1.1211.1911	feature_order	1
+s3.s3.1.hist.6.1.1211.1911	pos_feature_label	medium_up
 
 s3.s3.1.hist.6.1.1211.1911	feature_height_ratio	24
 
