--- a/example/main.10.conf
+++ b/example/main.10.conf
@@ -118,21 +118,21 @@ scale_tick_fontsize=13
 #$sample,$scf,$block_flag,$window_size,$depth_file,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,$tick_border,$label_size
 
 
-hist_scatter_line = hist,1,s3,s3,1,100,s3.s3.depth.txt,color->black:opacity->1,5->45,ytick_flag,10->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6	highlight_hgrid->26:2:green,28:2:black	highlight_columns->0:20:green:0.7,20:100:black:0.5	start_end_xaxis->111:511,711:1111,1211:1911
-hist_scatter_line = hist,1,s3,s3,1,100,s3.s3.depth.txt,color->black:opacity->1,55->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6
-hist_scatter_line = hist,1,s3,s3,2,100,s3.s3.depth.txt,color->black:opacity->1,5->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,5:25:0.2:0.2,6:6
+hist_scatter_line = hist,1,s3,s3,1,100,s3.s3.depth.txt:../data/s3.seq,color->black:opacity->1,5->45,ytick_flag,10->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6	highlight_hgrid->26:2:green,28:2:black	highlight_columns->0:20:green:0.7,20:100:black:0.5	start_end_xaxis->111:511,711:1111,1211:1911
+hist_scatter_line = hist,1,s3,s3,1,100,s3.s3.depth.txt:../data/s3.seq,color->black:opacity->1,55->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6
+hist_scatter_line = hist,1,s3,s3,2,100,s3.s3.depth.txt:../data/s3.seq,color->black:opacity->1,5->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,5:25:0.2:0.2,6:6
 
 #hist_scatter_line = scatter,1,s3,s3,3,50,s3.s3.depth.txt,5->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,3:3
-hist_scatter_line = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt,color->black:opacity->1,55->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,6:6
-hist_scatter_line = hist,1,s3,s3,3,50,s3.s3.depth.txt,color->black:opacity->1,10->50,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,6:6
+hist_scatter_line = scatter_line,1,s3,s3,3,50,s3.s3.depth.txt:../data/s3.seq,color->black:opacity->1,55->100,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,6:6
+hist_scatter_line = hist,1,s3,s3,3,50,s3.s3.depth.txt:../data/s3.seq,color->black:opacity->1,10->50,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,6:6
 
 #hist_scatter_line = hist,1,s3,s3,3,50,s3.s3.depth.txt,-55->-90,ytick_flag,10->30->4,ytick_label_text,hgrid_flag,black:green,1:0.3,0.3:0.3,3:3
 
-hist_scatter_line = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam,color->black:opacity->1,10->100,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,6:6
+hist_scatter_line = hist,1,s2,s2,1,50,../data/s2.seq.sam.sorted.bam:../data/s2.seq,color->black:opacity->1,10->100,ytick_flag,10->120->10,ytick_label_text,hgrid_flag,black:green,1:0.3,5:25:0.2:0.2,6:6
 
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,stack,5->45,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6,0	start_end_xaxis->3000:4000,4500:5500
-reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam,stack,50->90,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6,0	start_end_xaxis->2000:6000
-reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam,stack,5->90,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6,0	start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam:../data/s2.seq,stack,5->45,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6,0	start_end_xaxis->3000:4000,4500:5500
+reads_mapping=long_reads,1,s2,s2000,0,../data/s2.seq.longreads.map2ref.sort.bam:../data/s2.seq,stack,50->90,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6,0	start_end_xaxis->2000:6000
+reads_mapping=long_reads,1,s2,s20000,0,../data/s2.seq.longreads.map2ref.sort.bam:../data/s2.seq,stack,5->90,ytick_flag,20->30->2,ytick_label_text,hgrid_flag,green:black,1:0.5,5:25:0.2:0.2,6:6,0	start_end_xaxis->2000:6000
 
 
 tracks_shift_y=s2,0,+5:+0;s3,0,+5:+1
