--- a/example/s3.s3.1.1.111.511.depth.setting.conf
+++ b/example/s3.s3.1.1.111.511.depth.setting.conf
@@ -2,6 +2,7 @@ s3.s3.1.hist.0.1.111.511	display_feature_label	no
 s3.s3.1.hist.0.1.111.511	feature_color	black
 s3.s3.1.hist.0.1.111.511	feature_opacity	1
 s3.s3.1.hist.0.1.111.511	feature_order	1
+s3.s3.1.hist.0.1.111.511	pos_feature_label	medium_up
 
 s3.s3.1.hist.0.1.111.511	feature_height_ratio	36
 
@@ -13,6 +14,7 @@ s3.s3.1.hist.1.1.111.511	display_feature_label	no
 s3.s3.1.hist.1.1.111.511	feature_color	black
 s3.s3.1.hist.1.1.111.511	feature_opacity	1
 s3.s3.1.hist.1.1.111.511	feature_order	1
+s3.s3.1.hist.1.1.111.511	pos_feature_label	medium_up
 
 s3.s3.1.hist.1.1.111.511	feature_height_ratio	24
 
@@ -24,6 +26,7 @@ s3.s3.1.hist.2.1.111.511	display_feature_label	no
 s3.s3.1.hist.2.1.111.511	feature_color	black
 s3.s3.1.hist.2.1.111.511	feature_opacity	1
 s3.s3.1.hist.2.1.111.511	feature_order	1
+s3.s3.1.hist.2.1.111.511	pos_feature_label	medium_up
 
 s3.s3.1.hist.2.1.111.511	feature_height_ratio	32
 
@@ -35,6 +38,7 @@ s3.s3.1.hist.3.1.111.511	display_feature_label	no
 s3.s3.1.hist.3.1.111.511	feature_color	black
 s3.s3.1.hist.3.1.111.511	feature_opacity	1
 s3.s3.1.hist.3.1.111.511	feature_order	1
+s3.s3.1.hist.3.1.111.511	pos_feature_label	medium_up
 
 s3.s3.1.hist.3.1.111.511	feature_height_ratio	30
 
