--- a/example/s3.s3.1.2.11.2010.depth.setting.conf
+++ b/example/s3.s3.1.2.11.2010.depth.setting.conf
@@ -2,6 +2,7 @@ s3.s3.1.hist.0.2.11.2010	display_feature_label	no
 s3.s3.1.hist.0.2.11.2010	feature_color	black
 s3.s3.1.hist.0.2.11.2010	feature_opacity	1
 s3.s3.1.hist.0.2.11.2010	feature_order	1
+s3.s3.1.hist.0.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.0.2.11.2010	feature_height_ratio	13.5
 
@@ -13,6 +14,7 @@ s3.s3.1.hist.1.2.11.2010	display_feature_label	no
 s3.s3.1.hist.1.2.11.2010	feature_color	black
 s3.s3.1.hist.1.2.11.2010	feature_opacity	1
 s3.s3.1.hist.1.2.11.2010	feature_order	1
+s3.s3.1.hist.1.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.1.2.11.2010	feature_height_ratio	36
 
@@ -24,6 +26,7 @@ s3.s3.1.hist.2.2.11.2010	display_feature_label	no
 s3.s3.1.hist.2.2.11.2010	feature_color	black
 s3.s3.1.hist.2.2.11.2010	feature_opacity	1
 s3.s3.1.hist.2.2.11.2010	feature_order	1
+s3.s3.1.hist.2.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.2.2.11.2010	feature_height_ratio	9
 
@@ -35,6 +38,7 @@ s3.s3.1.hist.3.2.11.2010	display_feature_label	no
 s3.s3.1.hist.3.2.11.2010	feature_color	black
 s3.s3.1.hist.3.2.11.2010	feature_opacity	1
 s3.s3.1.hist.3.2.11.2010	feature_order	1
+s3.s3.1.hist.3.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.3.2.11.2010	feature_height_ratio	27
 
@@ -46,6 +50,7 @@ s3.s3.1.hist.4.2.11.2010	display_feature_label	no
 s3.s3.1.hist.4.2.11.2010	feature_color	black
 s3.s3.1.hist.4.2.11.2010	feature_opacity	1
 s3.s3.1.hist.4.2.11.2010	feature_order	1
+s3.s3.1.hist.4.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.4.2.11.2010	feature_height_ratio	22.5
 
@@ -57,6 +62,7 @@ s3.s3.1.hist.5.2.11.2010	display_feature_label	no
 s3.s3.1.hist.5.2.11.2010	feature_color	black
 s3.s3.1.hist.5.2.11.2010	feature_opacity	1
 s3.s3.1.hist.5.2.11.2010	feature_order	1
+s3.s3.1.hist.5.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.5.2.11.2010	feature_height_ratio	18
 
@@ -68,6 +74,7 @@ s3.s3.1.hist.6.2.11.2010	display_feature_label	no
 s3.s3.1.hist.6.2.11.2010	feature_color	black
 s3.s3.1.hist.6.2.11.2010	feature_opacity	1
 s3.s3.1.hist.6.2.11.2010	feature_order	1
+s3.s3.1.hist.6.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.6.2.11.2010	feature_height_ratio	18
 
@@ -79,6 +86,7 @@ s3.s3.1.hist.7.2.11.2010	display_feature_label	no
 s3.s3.1.hist.7.2.11.2010	feature_color	black
 s3.s3.1.hist.7.2.11.2010	feature_opacity	1
 s3.s3.1.hist.7.2.11.2010	feature_order	1
+s3.s3.1.hist.7.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.7.2.11.2010	feature_height_ratio	22.5
 
@@ -90,6 +98,7 @@ s3.s3.1.hist.8.2.11.2010	display_feature_label	no
 s3.s3.1.hist.8.2.11.2010	feature_color	black
 s3.s3.1.hist.8.2.11.2010	feature_opacity	1
 s3.s3.1.hist.8.2.11.2010	feature_order	1
+s3.s3.1.hist.8.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.8.2.11.2010	feature_height_ratio	31.5
 
@@ -101,6 +110,7 @@ s3.s3.1.hist.9.2.11.2010	display_feature_label	no
 s3.s3.1.hist.9.2.11.2010	feature_color	black
 s3.s3.1.hist.9.2.11.2010	feature_opacity	1
 s3.s3.1.hist.9.2.11.2010	feature_order	1
+s3.s3.1.hist.9.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.9.2.11.2010	feature_height_ratio	22.5
 
@@ -112,6 +122,7 @@ s3.s3.1.hist.10.2.11.2010	display_feature_label	no
 s3.s3.1.hist.10.2.11.2010	feature_color	black
 s3.s3.1.hist.10.2.11.2010	feature_opacity	1
 s3.s3.1.hist.10.2.11.2010	feature_order	1
+s3.s3.1.hist.10.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.10.2.11.2010	feature_height_ratio	27
 
@@ -123,6 +134,7 @@ s3.s3.1.hist.11.2.11.2010	display_feature_label	no
 s3.s3.1.hist.11.2.11.2010	feature_color	black
 s3.s3.1.hist.11.2.11.2010	feature_opacity	1
 s3.s3.1.hist.11.2.11.2010	feature_order	1
+s3.s3.1.hist.11.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.11.2.11.2010	feature_height_ratio	18
 
@@ -134,6 +146,7 @@ s3.s3.1.hist.12.2.11.2010	display_feature_label	no
 s3.s3.1.hist.12.2.11.2010	feature_color	black
 s3.s3.1.hist.12.2.11.2010	feature_opacity	1
 s3.s3.1.hist.12.2.11.2010	feature_order	1
+s3.s3.1.hist.12.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.12.2.11.2010	feature_height_ratio	27
 
@@ -145,6 +158,7 @@ s3.s3.1.hist.13.2.11.2010	display_feature_label	no
 s3.s3.1.hist.13.2.11.2010	feature_color	black
 s3.s3.1.hist.13.2.11.2010	feature_opacity	1
 s3.s3.1.hist.13.2.11.2010	feature_order	1
+s3.s3.1.hist.13.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.13.2.11.2010	feature_height_ratio	13.5
 
@@ -156,6 +170,7 @@ s3.s3.1.hist.14.2.11.2010	display_feature_label	no
 s3.s3.1.hist.14.2.11.2010	feature_color	black
 s3.s3.1.hist.14.2.11.2010	feature_opacity	1
 s3.s3.1.hist.14.2.11.2010	feature_order	1
+s3.s3.1.hist.14.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.14.2.11.2010	feature_height_ratio	22.5
 
@@ -167,6 +182,7 @@ s3.s3.1.hist.15.2.11.2010	display_feature_label	no
 s3.s3.1.hist.15.2.11.2010	feature_color	black
 s3.s3.1.hist.15.2.11.2010	feature_opacity	1
 s3.s3.1.hist.15.2.11.2010	feature_order	1
+s3.s3.1.hist.15.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.15.2.11.2010	feature_height_ratio	22.5
 
@@ -178,6 +194,7 @@ s3.s3.1.hist.16.2.11.2010	display_feature_label	no
 s3.s3.1.hist.16.2.11.2010	feature_color	black
 s3.s3.1.hist.16.2.11.2010	feature_opacity	1
 s3.s3.1.hist.16.2.11.2010	feature_order	1
+s3.s3.1.hist.16.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.16.2.11.2010	feature_height_ratio	4.5
 
@@ -189,6 +206,7 @@ s3.s3.1.hist.17.2.11.2010	display_feature_label	no
 s3.s3.1.hist.17.2.11.2010	feature_color	black
 s3.s3.1.hist.17.2.11.2010	feature_opacity	1
 s3.s3.1.hist.17.2.11.2010	feature_order	1
+s3.s3.1.hist.17.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.17.2.11.2010	feature_height_ratio	22.5
 
@@ -200,6 +218,7 @@ s3.s3.1.hist.18.2.11.2010	display_feature_label	no
 s3.s3.1.hist.18.2.11.2010	feature_color	black
 s3.s3.1.hist.18.2.11.2010	feature_opacity	1
 s3.s3.1.hist.18.2.11.2010	feature_order	1
+s3.s3.1.hist.18.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.18.2.11.2010	feature_height_ratio	9
 
@@ -211,6 +230,7 @@ s3.s3.1.hist.19.2.11.2010	display_feature_label	no
 s3.s3.1.hist.19.2.11.2010	feature_color	black
 s3.s3.1.hist.19.2.11.2010	feature_opacity	1
 s3.s3.1.hist.19.2.11.2010	feature_order	1
+s3.s3.1.hist.19.2.11.2010	pos_feature_label	medium_up
 
 s3.s3.1.hist.19.2.11.2010	feature_height_ratio	27
 
