--- a/example/s3.s3.2.3.2020.5000.depth.setting.conf
+++ b/example/s3.s3.2.3.2020.5000.depth.setting.conf
@@ -2,6 +2,7 @@ s3.s3.2.hist.0.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.0.3.2020.5000	feature_color	black
 s3.s3.2.hist.0.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.0.3.2020.5000	feature_order	1
+s3.s3.2.hist.0.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.0.3.2020.5000	feature_height_ratio	38
 
@@ -13,6 +14,7 @@ s3.s3.2.hist.1.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.1.3.2020.5000	feature_color	black
 s3.s3.2.hist.1.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.1.3.2020.5000	feature_order	1
+s3.s3.2.hist.1.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.1.3.2020.5000	feature_height_ratio	38
 
@@ -24,6 +26,7 @@ s3.s3.2.hist.2.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.2.3.2020.5000	feature_color	black
 s3.s3.2.hist.2.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.2.3.2020.5000	feature_order	1
+s3.s3.2.hist.2.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.2.3.2020.5000	feature_height_ratio	57
 
@@ -35,6 +38,7 @@ s3.s3.2.hist.3.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.3.3.2020.5000	feature_color	black
 s3.s3.2.hist.3.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.3.3.2020.5000	feature_order	1
+s3.s3.2.hist.3.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.3.3.2020.5000	feature_height_ratio	66.5
 
@@ -46,6 +50,7 @@ s3.s3.2.hist.4.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.4.3.2020.5000	feature_color	black
 s3.s3.2.hist.4.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.4.3.2020.5000	feature_order	1
+s3.s3.2.hist.4.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.4.3.2020.5000	feature_height_ratio	38
 
@@ -57,6 +62,7 @@ s3.s3.2.hist.5.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.5.3.2020.5000	feature_color	black
 s3.s3.2.hist.5.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.5.3.2020.5000	feature_order	1
+s3.s3.2.hist.5.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.5.3.2020.5000	feature_height_ratio	66.5
 
@@ -68,6 +74,7 @@ s3.s3.2.hist.6.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.6.3.2020.5000	feature_color	black
 s3.s3.2.hist.6.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.6.3.2020.5000	feature_order	1
+s3.s3.2.hist.6.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.6.3.2020.5000	feature_height_ratio	28.5
 
@@ -79,6 +86,7 @@ s3.s3.2.hist.7.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.7.3.2020.5000	feature_color	black
 s3.s3.2.hist.7.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.7.3.2020.5000	feature_order	1
+s3.s3.2.hist.7.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.7.3.2020.5000	feature_height_ratio	85.5
 
@@ -90,6 +98,7 @@ s3.s3.2.hist.8.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.8.3.2020.5000	feature_color	black
 s3.s3.2.hist.8.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.8.3.2020.5000	feature_order	1
+s3.s3.2.hist.8.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.8.3.2020.5000	feature_height_ratio	47.5
 
@@ -101,6 +110,7 @@ s3.s3.2.hist.9.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.9.3.2020.5000	feature_color	black
 s3.s3.2.hist.9.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.9.3.2020.5000	feature_order	1
+s3.s3.2.hist.9.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.9.3.2020.5000	feature_height_ratio	66.5
 
@@ -112,6 +122,7 @@ s3.s3.2.hist.10.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.10.3.2020.5000	feature_color	black
 s3.s3.2.hist.10.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.10.3.2020.5000	feature_order	1
+s3.s3.2.hist.10.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.10.3.2020.5000	feature_height_ratio	66.5
 
@@ -123,6 +134,7 @@ s3.s3.2.hist.11.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.11.3.2020.5000	feature_color	black
 s3.s3.2.hist.11.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.11.3.2020.5000	feature_order	1
+s3.s3.2.hist.11.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.11.3.2020.5000	feature_height_ratio	47.5
 
@@ -134,6 +146,7 @@ s3.s3.2.hist.12.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.12.3.2020.5000	feature_color	black
 s3.s3.2.hist.12.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.12.3.2020.5000	feature_order	1
+s3.s3.2.hist.12.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.12.3.2020.5000	feature_height_ratio	28.5
 
@@ -145,6 +158,7 @@ s3.s3.2.hist.13.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.13.3.2020.5000	feature_color	black
 s3.s3.2.hist.13.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.13.3.2020.5000	feature_order	1
+s3.s3.2.hist.13.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.13.3.2020.5000	feature_height_ratio	28.5
 
@@ -156,6 +170,7 @@ s3.s3.2.hist.14.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.14.3.2020.5000	feature_color	black
 s3.s3.2.hist.14.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.14.3.2020.5000	feature_order	1
+s3.s3.2.hist.14.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.14.3.2020.5000	feature_height_ratio	19
 
@@ -167,6 +182,7 @@ s3.s3.2.hist.15.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.15.3.2020.5000	feature_color	black
 s3.s3.2.hist.15.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.15.3.2020.5000	feature_order	1
+s3.s3.2.hist.15.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.15.3.2020.5000	feature_height_ratio	19
 
@@ -178,6 +194,7 @@ s3.s3.2.hist.16.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.16.3.2020.5000	feature_color	black
 s3.s3.2.hist.16.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.16.3.2020.5000	feature_order	1
+s3.s3.2.hist.16.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.16.3.2020.5000	feature_height_ratio	19
 
@@ -189,6 +206,7 @@ s3.s3.2.hist.17.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.17.3.2020.5000	feature_color	black
 s3.s3.2.hist.17.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.17.3.2020.5000	feature_order	1
+s3.s3.2.hist.17.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.17.3.2020.5000	feature_height_ratio	66.5
 
@@ -200,6 +218,7 @@ s3.s3.2.hist.18.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.18.3.2020.5000	feature_color	black
 s3.s3.2.hist.18.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.18.3.2020.5000	feature_order	1
+s3.s3.2.hist.18.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.18.3.2020.5000	feature_height_ratio	47.5
 
@@ -211,6 +230,7 @@ s3.s3.2.hist.19.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.19.3.2020.5000	feature_color	black
 s3.s3.2.hist.19.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.19.3.2020.5000	feature_order	1
+s3.s3.2.hist.19.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.19.3.2020.5000	feature_height_ratio	38
 
@@ -222,6 +242,7 @@ s3.s3.2.hist.20.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.20.3.2020.5000	feature_color	black
 s3.s3.2.hist.20.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.20.3.2020.5000	feature_order	1
+s3.s3.2.hist.20.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.20.3.2020.5000	feature_height_ratio	57
 
@@ -233,6 +254,7 @@ s3.s3.2.hist.21.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.21.3.2020.5000	feature_color	black
 s3.s3.2.hist.21.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.21.3.2020.5000	feature_order	1
+s3.s3.2.hist.21.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.21.3.2020.5000	feature_height_ratio	38
 
@@ -244,6 +266,7 @@ s3.s3.2.hist.22.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.22.3.2020.5000	feature_color	black
 s3.s3.2.hist.22.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.22.3.2020.5000	feature_order	1
+s3.s3.2.hist.22.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.22.3.2020.5000	feature_height_ratio	66.5
 
@@ -255,6 +278,7 @@ s3.s3.2.hist.23.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.23.3.2020.5000	feature_color	black
 s3.s3.2.hist.23.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.23.3.2020.5000	feature_order	1
+s3.s3.2.hist.23.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.23.3.2020.5000	feature_height_ratio	57
 
@@ -266,6 +290,7 @@ s3.s3.2.hist.24.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.24.3.2020.5000	feature_color	black
 s3.s3.2.hist.24.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.24.3.2020.5000	feature_order	1
+s3.s3.2.hist.24.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.24.3.2020.5000	feature_height_ratio	95
 
@@ -277,6 +302,7 @@ s3.s3.2.hist.25.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.25.3.2020.5000	feature_color	black
 s3.s3.2.hist.25.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.25.3.2020.5000	feature_order	1
+s3.s3.2.hist.25.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.25.3.2020.5000	feature_height_ratio	28.5
 
@@ -288,6 +314,7 @@ s3.s3.2.hist.26.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.26.3.2020.5000	feature_color	black
 s3.s3.2.hist.26.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.26.3.2020.5000	feature_order	1
+s3.s3.2.hist.26.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.26.3.2020.5000	feature_height_ratio	38
 
@@ -299,6 +326,7 @@ s3.s3.2.hist.27.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.27.3.2020.5000	feature_color	black
 s3.s3.2.hist.27.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.27.3.2020.5000	feature_order	1
+s3.s3.2.hist.27.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.27.3.2020.5000	feature_height_ratio	28.5
 
@@ -310,6 +338,7 @@ s3.s3.2.hist.28.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.28.3.2020.5000	feature_color	black
 s3.s3.2.hist.28.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.28.3.2020.5000	feature_order	1
+s3.s3.2.hist.28.3.2020.5000	pos_feature_label	medium_up
 
 s3.s3.2.hist.28.3.2020.5000	feature_height_ratio	47.5
 
