--- a/example/main.conf
+++ b/example/main.conf
@@ -73,7 +73,7 @@ legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-crossing_link = feature.crossing.link.conf
+#crossing_link = feature.crossing.link.conf
 cross_link_color = #FF8C00
 cross_link_color_reverse = #3CB371
 cross_link_opacity = 0.6
@@ -98,3 +98,8 @@ scale_tick_height=0.01
 scale_order=-1
 scale_tick_padding_y=15
 scale_tick_fontsize=13
+
+
+synteny = order->1,s1->s2,../data/s1.seq->../data/s2.seq,../data/s1.mapto.s2.paf.gz
+synteny = order->1,s2->s3,../data/s2.seq->../data/s3.seq,../data/s2.mapto.s3.paf.gz
+synteny = order->0,s2->s4,../data/s2.seq->../data/s4.seq,../data/s2.mapto.s4.paf.gz
