--- a/example/main.conf
+++ b/example/main.conf
@@ -3,8 +3,8 @@ svg_width_height = 1500,800 # *
 pdf_dpi = 100
 
 # plot feature type
-feature_keywords = gene,xxxxx,xxxxx # *
-feature_setting = feature.color.label.conf # *
+feature_keywords = gene,synteny,xxxxx # *
+feature_setting = feature.color.label.conf7 # *
 
 # figure width layout
 width_ratio_ref_cluster_legend = 0.1-0.75-0.15 # *
@@ -22,6 +22,7 @@ track_style=fill:blue # green or #02030
 feature_color = rgb(50,205,50)
 genome_height_ratio=1 # mean genome height extend ratio
 feature_arrow_sharp_extent=1 # bigger mean sharper arrow
+display_segment_name=no,center,shift_y:+2,fontsize:10,color:black,order:5 # yes or no , for scaffold name
 # order for display
 track_order=1
 feature_order=2
@@ -73,7 +74,7 @@ legend_stroke_color=black
 legend_stroke_width=0.5
 
 # crossling among features
-#crossing_link = feature.crossing.link.conf
+crossing_link = feature.crossing.link.conf
 cross_link_color = #FF8C00
 cross_link_color_reverse = #3CB371
 cross_link_opacity = 0.6
@@ -94,12 +95,7 @@ scale_width=0.5
 scale_ratio=2000 # bp
 scale_padding_y=-0.2
 scale_tick_opacity=1
-scale_tick_height=0.01
+scale_tick_height=0.4
 scale_order=-1
 scale_tick_padding_y=15
 scale_tick_fontsize=13
-
-
-synteny = order->1,s1->s2,../data/s1.seq->../data/s2.seq,../data/s1.mapto.s2.paf.gz
-synteny = order->1,s2->s3,../data/s2.seq->../data/s3.seq,../data/s2.mapto.s3.paf.gz
-synteny = order->0,s2->s4,../data/s2.seq->../data/s4.seq,../data/s2.mapto.s4.paf.gz
