--- a/example/chr14.14.1.2.short_reads.ylabel.setting.conf
+++ b/example/chr14.14.1.2.short_reads.ylabel.setting.conf
@@ -11,3 +11,4 @@ chr14.14.1.66900400.66917974.2.short_reads.ylabel+	pos_feature_label	right_low
 chr14.14.1.66900400.66917974.2.short_reads.ylabel+	feature_label_auto_angle_flag	0
 chr14.14.1.66900400.66917974.2.short_reads.ylabel+	feature_color	white
 chr14.14.1.66900400.66917974.2.short_reads.ylabel+	feature_shape	rect
+chr14.14.1.66900400.66917974.2.short_reads.ylabel+	label_text_alignment_baseline	middle
