--- a/example/chr14.hist_scatter_line.setting.conf
+++ b/example/chr14.hist_scatter_line.setting.conf
@@ -551,6 +551,7 @@ chr14.14.1.66900400.66917974.2.hist.ylabel+	pos_feature_label	right_low
 chr14.14.1.66900400.66917974.2.hist.ylabel+	feature_label_auto_angle_flag	0
 chr14.14.1.66900400.66917974.2.hist.ylabel+	feature_color	white
 chr14.14.1.66900400.66917974.2.hist.ylabel+	feature_shape	rect
+chr14.14.1.66900400.66917974.2.hist.ylabel+	label_text_alignment_baseline	middle
 
 chr14.14.1.66900400.66917974.hist.ytickbackbone2	feature_height_ratio	10
 
